--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/hearthhub_logo.png" />
+    <link rel="shortcut icon" type="image/png" href="/hearthhub_logo.png">
+    <link rel="apple-touch-icon" sizes="128x128" href="/hearthhub_logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HearthHub</title>
   </head>
